--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^3.0.0",
+    "@types/chai-as-promised": "0.0.30",
     "@types/mocha": "^2.0.0",
     "@types/node": "^6.0.0",
     "chai": "^3.0.0",
+    "chai-as-promised": "^6.0.0",
     "mocha": "^3.0.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
