--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "clean": "rimraf lib",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "echo Using TypeScript && tsc --version && tsc --pretty",
-    "test": "PORT=8000 nodemon --ext ts --watch ./  --exec 'nyc --reporter=text --reporter=html mocha -r ts-node/register  ./test/**/*.spec.ts  --recursive  --reporter spec  --slow 0' --delay 1",
+    "test": "nyc --reporter=text --reporter=html mocha -r ts-node/register  ./test/**/*.spec.ts  --recursive  --reporter spec  --slow 0",
     "testmon": "PORT=8000 nodemon --ext ts --watch ./  --exec 'mocha -r ts-node/register  ./test/**/*.spec.ts  --recursive  --reporter spec  --slow 0' --delay 1",
     "testonce": "mocha --compilers ts:ts-node/register --recursive 'test/**/*.spec.ts' --reporter spec --slow 0",
     "coverage": "nyc --reporter=text --reporter=html mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts'",
     "watch": "npm run build -- --watch",
     "watch:test": "npm run test -- --watch",
-    "build:test": "npm run build && npm run test"
+    "build:test": "npm run build && npm run testonce",
+    "watch:coverage": "npm run coverage -- --watch",
+    "forensic": "sh -c 'node --version; npm --version; npm ls' > output.txt"
   },
   "dependencies": {},
   "devDependencies": {
