--- a/package.json
+++ b/package.json
@@ -17,17 +17,16 @@
   "main": "lib/alpha.js",
   "typings": "typings/alpha.d.ts",
   "scripts": {
+    "test": "PORT=8000 nodemon --ext ts --watch ./  --exec 'npm run mocha' --delay 1",
     "clean": "rimraf lib",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "echo Using TypeScript && tsc --version && tsc --pretty",
-    "test": "nyc --reporter=text --reporter=html mocha -r ts-node/register  ./test/**/*.spec.ts  --recursive  --reporter spec  --slow 0",
-    "testmon": "PORT=8000 nodemon --ext ts --watch ./  --exec 'mocha -r ts-node/register  ./test/**/*.spec.ts  --recursive  --reporter spec  --slow 0' --delay 1",
-    "testonce": "mocha --compilers ts:ts-node/register --recursive 'test/**/*.spec.ts' --reporter spec --slow 0",
-    "coverage": "nyc --reporter=text --reporter=html mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts'",
-    "watch": "npm run build -- --watch",
-    "watch:test": "npm run test -- --watch",
-    "build:test": "npm run build && npm run testonce",
-    "watch:coverage": "npm run coverage -- --watch",
+    "watch:build": "npm run build -- --watch",
+    "mocha": "echo Using Mocha && mocha --version && mocha --compilers ts:ts-node/register --recursive 'test/**/*.spec.ts' --reporter spec --slow 0",
+    "watch:mocha": "PORT=8000 nodemon --ext ts --quiet --watch ./  --exec 'npm run mocha' --delay 1",
+    "nyc": "echo Using Istanbul/nyc && nyc --version && nyc  mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts'",
+    "watch:nyc": "PORT=8000 nodemon --ext ts  --watch ./  --exec 'npm run nyc' --delay 1",
+    "make": "npm run lint && npm run build && npm run mocha",
     "forensic": "sh -c 'node --version; npm --version; npm ls' > output.txt"
   },
   "dependencies": {},
@@ -49,6 +48,10 @@
     "node": ">=4.0.0"
   },
   "nyc": {
+    "lines": 99,
+    "statements": 99,
+    "functions": 99,
+    "branches": 99,
     "include": [
       "src/*.ts"
     ],
@@ -57,7 +60,10 @@
       "node_modules",
       "typings",
       "coverage",
-      "test"
+      "test",
+      ".sandbox",
+      ".nyc_output",
+      "coverage"
     ],
     "extension": [
       ".ts"
@@ -65,7 +71,8 @@
     "require": [
       "ts-node/register"
     ],
-    "reporter": [],
+    "reporter": ["lcov", "text"],
+    "report-dir": "./coverage",
     "all": true
   }
 }
