--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "watch:mocha": "PORT=8000 nodemon --ext ts --quiet --watch ./  --exec 'npm run mocha' --delay 1",
     "nyc": "echo Using Istanbul/nyc && nyc --version && nyc  mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts'",
     "watch:nyc": "PORT=8000 nodemon --ext ts  --watch ./  --exec 'npm run nyc' --delay 1",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "make": "npm run lint && npm run build && npm run mocha",
     "forensic": "sh -c 'node --version; npm --version; npm ls' > output.txt"
   },
@@ -37,6 +38,7 @@
     "@types/node": "^6.0.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^6.0.0",
+    "coveralls": "^2.12.0",
     "mocha": "^3.0.0",
     "nyc": "^10.0.0",
     "rimraf": "^2.0.0",
@@ -71,7 +73,10 @@
     "require": [
       "ts-node/register"
     ],
-    "reporter": ["lcov", "text"],
+    "reporter": [
+      "lcov",
+      "text"
+    ],
     "report-dir": "./coverage",
     "all": true
   }
