refactored private routines into ./src/internals

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es2017",
-    "typeRoots": ["./node_modules/@types", "./typings"],
+    "typeRoots": ["./node_modules/@types"],
     "watch": false
   },
   "include": [
