--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "functions": 99,
     "branches": 99,
     "include": [
-      "src/*.ts"
+      "src/**/*.ts"
     ],
     "exclude": [
       "lib",
