--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "main": "lib/alpha.js",
   "typings": "typings/alpha.d.ts",
   "scripts": {
-    "test": "PORT=8000 nodemon --ext ts --watch ./  --exec 'npm run mocha' --delay 1",
+    "test": "PORT=8000 nodemon --ext ts --watch ./  --exec 'npm run mocha:min' --delay 1",
     "clean": "rimraf lib",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
     "build": "echo Using TypeScript && tsc --version && tsc --pretty",
     "watch:build": "npm run build -- --watch",
     "mocha": "echo Using Mocha && mocha --version && mocha --compilers ts:ts-node/register --recursive 'test/**/*.spec.ts' --reporter spec --slow 0",
+    "mocha:min": "echo Using Mocha && mocha --version && mocha --compilers ts:ts-node/register --recursive 'test/**/*.spec.ts' --reporter landing --slow 0",
     "watch:mocha": "PORT=8000 nodemon --ext ts --quiet --watch ./  --exec 'npm run mocha' --delay 1",
-    "nyc": "echo Using Istanbul/nyc && nyc --version && nyc  mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts'",
+    "nyc": "echo Using Istanbul/nyc && nyc --version && nyc  mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts' --reporter landing",
+    "nyc:sum": "echo Using Istanbul/nyc && nyc --version && nyc --reporter=text-summary mocha --compilers ts:ts-node/register  --recursive 'test/**/*.spec.ts' --reporter landing",
     "watch:nyc": "PORT=8000 nodemon --ext ts  --watch ./  --exec 'npm run nyc' --delay 1",
+    "watch:nyc:sum": "PORT=8000 nodemon --ext ts  --watch ./  --exec 'npm run nyc:sum' --delay 1",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "make": "npm run lint && npm run build && npm run mocha",
     "forensic": "sh -c 'node --version; npm --version; npm ls' > output.txt"
