--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "./typings",
-    "inlineSourceMap": false,
+    "inlineSourceMap": true,
     "lib": ["es2017", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./lib",
     "removeComments": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "suppressImplicitAnyIndexErrors": true,
     "target": "es2017",
     "typeRoots": ["./node_modules/@types"],
