--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "files": [
     "lib/**/*.js",
-    "!lib/**/*.map"
+    "!lib/**/*.map",
+    "typings"
   ],
   "main": "lib/alpha.js",
   "typings": "typings/alpha.d.ts",
