--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,10 @@
     "watch": false
   },
   "include": [
+    "test/**/*.spec.ts",
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "node_modules"
   ]
 }
