--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "main": "lib/alpha.js",
   "typings": "typings/alpha.d.ts",
   "scripts": {
-    "cover": "nyc mocha --opts mocha.opts",
-    "test": "mocha --opts mocha.opts --watch",
-    "mocha": "mocha --opts mocha.opts",
     "clean": "rimraf lib/ coverage/ .nyc_output/ typings/",
     "lint": "tslint --force --format verbose \"src/**/*.ts\"",
-    "build": "tsc --version && tsc --pretty",
-    "watch:build": "npm run build -- --watch",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "build": "npm run build -- --watch",
+    "test": "mocha --opts mocha.opts --watch",
+    "cover": "nyc mocha --opts mocha.opts",
+    "mocha": "mocha --opts mocha.opts",
     "make": "npm run lint && npm run build && npm run coverage",
+    "tsc": "tsc --version && tsc --pretty",
+    "sendlcov": "nyc report --reporter=text-lcov | coveralls",
     "forensic": "sh -c 'node --version; npm --version; npm ls' > output.txt"
   },
   "dependencies": {},
