--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@types/chai-as-promised": "0.0.30",
     "@types/mocha": "^2.0.0",
     "@types/node": "^6.0.0",
+    "@types/shelljs": "^0.7.0",
     "chai": "^3.0.0",
     "chai-as-promised": "^6.0.0",
     "coveralls": "^2.12.0",
     "mocha": "^3.0.0",
     "nyc": "^10.2.0",
     "rimraf": "^2.0.0",
+    "shelljs": "^0.7.7",
     "source-map-support": "^0.4.14",
     "ts-node": "^2.1.2",
     "tslint": "^4.5.1",
