--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,32 @@
   "configurations": [{
       "type": "node",
       "request": "launch",
+      "name": "Mocha Tests",
+      "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+      "cwd": "${workspaceRoot}",
+      "args": [
+        "--full-trace",
+        "--bail",
+        "--reporter",
+        "spec",
+        "--slow",
+        "1",
+        "--compilers",
+        "ts-node/register",
+        "--log-timers-events",
+        "--prof",
+        "--check-leaks",
+        "--ui",
+        "tdd",
+        "--colors",
+        "--watch",
+        "${file}"
+      ],
+      "internalConsoleOptions": "openOnSessionStart"
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "Launch Program",
       "program": "${file}",
       "cwd": "${workspaceRoot}",
